# deserto-digital

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/src/: __init__.py
backend/src/api/: __init__.py  dependencies.py  main.py
backend/src/api/routers/: __init__.py  admin.py  estados.py  municipios.py  ranking.py
backend/src/api/schemas/: __init__.py  errors.py  responses.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  idd_score.py  municipio.py
backend/src/domain/services/: __init__.py  estado_metrics.py  scorer.py
backend/src/etl/: __init__.py  pipeline.py
backend/src/etl/schemas/: __init__.py  anatel.py  ibge.py
backend/src/etl/stages/: __init__.py  extract.py  score.py  transform.py  validate.py
backend/src/store/: __init__.py  memory_store.py
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: municipios_test.json
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: __init__.py  test_memory_store.py  test_scorer.py
data/: municipios.json
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ranking/: page.tsx
frontend/app/sobre/: page.tsx
frontend/hooks/: useMunicipio.ts  useMunicipios.ts  useStats.ts
frontend/lib/: api.ts  constants.ts  types.ts  utils.ts
frontend/types/: react-simple-maps.d.ts
scripts/: dev.ps1
(+20 files in other folders)
